--- a/Pertemuan 8/js06_svm.ipynb
+++ b/Pertemuan 8/js06_svm.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "<b>IDENTITAS</b>\n",
     "\n",
-    "NIM: 2041720174\n",
+    "NIM: 2041720179\n",
     "\n",
-    "Nama: Achmad Wibawa\n",
+    "Nama: Ahmad Abid\n",
     "\n",
     "Kelas: TI 3B"
    ]
